--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^9.19",
         "laravel/passport": "*",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "xylis/faker-cinema-providers": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
